--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.28.1
-google-generativeai==0.4.0
-pypdf2==4.0.1
-pandas==2.1.1
-pillow==10.0.1
+streamlit>=1.28.0
+google-generativeai>=0.3.0
+pypdf2>=4.0.0
+pandas>=2.0.0
+pillow>=10.0.0
+
