--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit>=1.28.0
-google-generativeai>=0.3.0
-pypdf2>=4.0.0
-pandas>=2.0.0
-pillow>=10.0.0
+streamlit
+google-generativeai
+pypdf2
+pandas
+pillow
+
 
